# solar-backend

./: Cargo.toml  Dockerfile  configuration.yaml
configuration/: local.yaml  production.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/entity/: base.rs  mod.rs
src/entity/account/: account.rs  aurora.rs
src/routes/: account.rs  health_check.rs  mod.rs  subscriptions.rs
src/scripts/: init_db.sh  sql
tests/: health_check.rs
