[package]
name = "solar_backend"
version = "0.1.0"
authors = ["Mario Canalella <info@dev.com>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "solar_backend"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.12.9"
